<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DeveloperActivity" >

        <ImageView
            android:id="@+id/imgMasud"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/masudparves"
            />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imgMasud"
            android:layout_marginTop="40dp"
            android:src="@drawable/junnatul"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignTop="@+id/imageView1"
            android:text="@string/jannatulProme"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0099ff"
            android:textStyle="bold"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            android:text="@string/Line"
            android:textColor="#ffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/MasudName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignTop="@+id/imgMasud"
            android:text="@string/masudParves"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#0099ff"
            android:textStyle="bold"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/Prome"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageView1"
            android:layout_toRightOf="@+id/imgMasud"
            android:text="@string/Masud"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:text="About Us"
            android:textAlignment="center"
            android:layout_marginTop="-50dp"
            android:textSize="25sp"
            android:textColor="#77b300"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView5"
            android:text="@string/JahangirSir"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_alignRight="@+id/MasudName"
            android:layout_alignTop="@+id/imageView2"
            android:text="@string/jahangirAlam"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#0099ff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginLeft="-5dp"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="20dp"
            android:layout_toLeftOf="@+id/textView7"
            android:src="@drawable/jahangir" />

</RelativeLayout>
