<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HelpActivity"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/centerHelpline"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/followCGPA"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#77b300"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Step1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/stepCGPA1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/logoBackground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Step2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Enter your subject&apos;s credit."
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/logoBackground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Step3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/stepCGPA3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/logoBackground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Step4"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/stepCGPA4"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/logoBackground" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="25dp"
        android:text="@string/followAverageCGPA"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#77b300"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/textView7"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView7"
                android:text="@string/Step1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView9"
                android:layout_alignBottom="@+id/textView9"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/textView9"
                android:text="@string/stepAverageCGPA1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/logoBackground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView7"
                android:text="@string/Step2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView9"
                android:layout_alignBottom="@+id/textView9"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/textView9"
                android:text="@string/stepAverageCGPA2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/logoBackground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView7"
                android:text="@string/Step3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView9"
                android:layout_alignBottom="@+id/textView9"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/textView9"
                android:text="@string/stepAverageCGPA3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/logoBackground" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_below="@+id/linearLayout3"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_below="@+id/linearLayout1"
            android:layout_marginTop="25dp"
            android:text="@string/followExpectedCGPA"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#77b300"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView7"
                android:text="@string/Step1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView9"
                android:layout_alignBottom="@+id/textView9"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/textView9"
                android:text="@string/stepExpectedCGPA1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/logoBackground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView7"
                android:text="@string/Step2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView9"
                android:layout_alignBottom="@+id/textView9"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/textView9"
                android:text="@string/stepExpectedCGPA2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/logoBackground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView7"
                android:text="@string/Step3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView9"
                android:layout_alignBottom="@+id/textView9"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/textView9"
                android:text="@string/stepExpectedCGPA3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/logoBackground" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

</ScrollView>
